# school-edupulse

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  prototype.html
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_subjects.py  0003_classes_streams.py  0004_students_minimal.py  0005_subject_ncdc_cycles.py  0006_student_enrollment.py  0007_teacher_assignments.py  0008_attendance.py  0009_timetable.py  (+30 more)
apps/api/app/: __init__.py  main.py
apps/api/scripts/: seed.py
apps/api/skulpulse_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  enrollment_helpers.py  test_academic_calendar.py  test_admissions.py  test_assessment.py  test_attendance.py  test_circulars.py  test_classes.py  test_enrollment_validation.py  test_finance.py  test_grading_config.py  test_hostel.py  test_hr_payroll.py  test_module_gate.py  test_onboarding_idempotency.py  test_parent_portal.py  test_platform_admins.py  test_platform_auth.py  test_platform_reset.py  test_ple.py  test_rate_limit.py  test_reportcards.py  test_request_logging.py  test_rls.py  test_schema.py  test_school_badge.py  test_school_code_service.py  test_school_time.py  test_security.py  test_student_import_schema.py  test_student_profile.py  test_students.py  test_subjects.py  test_teachers.py  test_tenant_auth.py  test_tenant_isolation.py  test_tenant_selfservice.py  test_tenant_users.py  test_term_calendar.py  test_term_registration.py  (+1 more)
(+453 files in other folders)
